[gd_scene load_steps=8 format=3 uid="uid://c46dertmd34yd"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_vlr70"]
[ext_resource type="PackedScene" uid="uid://bcp1yywo181cd" path="res://scenes/ui/main_menu.tscn" id="2_2ucyk"]
[ext_resource type="PackedScene" uid="uid://c33c8c4k127jd" path="res://scenes/level.tscn" id="2_gxoi6"]
[ext_resource type="PackedScene" uid="uid://b5dxatoq5gi2e" path="res://scenes/ui/credits.tscn" id="4_a46pt"]
[ext_resource type="PackedScene" uid="uid://3mrfm35yqdr5" path="res://scenes/ui/death_screen.tscn" id="5_r7bqr"]
[ext_resource type="PackedScene" uid="uid://xtm5srwoutqq" path="res://scenes/ui/options.tscn" id="6_6ceqs"]
[ext_resource type="Texture2D" uid="uid://cmco2nuejtaka" path="res://asssets/tmp_stary_background.png" id="6_tesac"]

[node name="Main" type="Node2D"]
script = ExtResource("1_vlr70")
level_template = ExtResource("2_gxoi6")

[node name="MainMenu" parent="." instance=ExtResource("2_2ucyk")]
unique_name_in_owner = true

[node name="Credits" parent="." instance=ExtResource("4_a46pt")]
unique_name_in_owner = true
visible = false

[node name="DeathScreen" parent="." instance=ExtResource("5_r7bqr")]
unique_name_in_owner = true
visible = false

[node name="Options" parent="." instance=ExtResource("6_6ceqs")]
unique_name_in_owner = true
visible = false

[node name="TextureRect" type="Parallax2D" parent="."]
show_behind_parent = true
repeat_size = Vector2(256, 256)
repeat_times = 32

[node name="Sprite2D" type="Sprite2D" parent="TextureRect"]
texture = ExtResource("6_tesac")

[node name="MenuCamera" type="Camera2D" parent="."]
unique_name_in_owner = true

[connection signal="button_down" from="MainMenu/CenterContainer/VBoxContainer/Start" to="." method="load_level"]
[connection signal="button_down" from="MainMenu/CenterContainer/VBoxContainer/Options" to="." method="load_options"]
[connection signal="button_down" from="MainMenu/CenterContainer/VBoxContainer/Credits" to="." method="load_credits"]
[connection signal="button_down" from="Credits/Buttons/MainMenu" to="." method="load_main_menu"]
[connection signal="button_down" from="DeathScreen/CenterContainer/VBoxContainer/Restart" to="." method="load_level"]
[connection signal="button_down" from="DeathScreen/CenterContainer/VBoxContainer/Main Menu" to="." method="load_main_menu"]
[connection signal="button_down" from="Options/Buttons/MainMenu" to="." method="load_main_menu"]

[editable path="MainMenu"]
[editable path="Credits"]
[editable path="DeathScreen"]
[editable path="Options"]
